[package]
name = "depends"
version = "0.1.0"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Cycle safe topological sort for a set of nodes and their dependencies"
repository = "https://github.com/nu11ptr/depends"
documentation = "https://docs.rs/depends"
keywords = ["topological", "sort", "sorting", "dependencies", "dependency"]
categories = ["algorithms", "data-structures"]
readme = "README.md"
edition = "2021"
