[package]
name = "topo_sort"
version = "0.2.1"
authors = ["Scott Meeuwsen <smeeuwsen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A 'cycle-safe' topological sort for a set of nodes with dependencies"
repository = "https://github.com/nu11ptr/topo_sort"
documentation = "https://docs.rs/topo_sort"
keywords = ["topological", "sort", "sorting", "dependencies", "dependency"]
categories = ["algorithms", "data-structures"]
readme = "README.md"
edition = "2021"
